--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/Breath-of-Fresh-AirBNB/Fresh-AirBNB-Reviews#readme",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "eslint-plugin-jest": "^24.1.3",
     "express": "^4.17.1",
