--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "lorem-ipsum": "^2.0.3",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.11",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
@@ -44,6 +45,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.4",
     "webpack": "^4.44.2",
