--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "eslint-plugin-jest": "^24.1.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
@@ -33,9 +34,9 @@
     "mysql": "^2.18.1",
     "react": "latest",
     "react-dom": "latest",
-    "react-test-renderer": "^17.0.1",
     "react-router-dom": "latest",
-    "react-scripts": "2.0.0"
+    "react-scripts": "2.0.0",
+    "react-test-renderer": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
