--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Reviews section of Repo",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "node database/seed.js && node server/index.js",
     "build": "webpack",
     "watch": "webpack -w",
     "seed": "node database/seed.js",
