--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   survey:
-    build: Fresh-AirBNB-Reviews/
+    build: middleFile/
     depends_on:
       - 'database'
     ports:
